--- a/plugin/locale/bg/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/bg/LC_MESSAGES/AutoBackup.po
@@ -14,6 +14,9 @@ msgstr ""
 "|| n%100>=20) ? 1 : 2;\n"
 "X-Generator: Poedit 2.0.6\n"
 
+msgid "Auto backup"
+msgstr "Автоматично резервно копие"
+
 msgid "AutoBackup Configuration"
 msgstr "AutoBackup Настройки"
 
