--- a/plugin/locale/nl/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/nl/LC_MESSAGES/AutoBackup.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: milo\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-05-27 18:54+0200\n"
+"POT-Creation-Date: 2020-05-03 09:24+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLi <ims21@users.sourceforge.net>\n"
@@ -11,190 +11,197 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.3.1\n"
 
-#: ../plugin.py:129
-#, fuzzy
+#: plugin.py:129
 msgid "Auto backup"
-msgstr "Automatische reservekopie"
+msgstr "Auto Backup"
 
-#: ../ui.py:98 ../ui.py:146
-msgid "AutoBackup Configuration"
-msgstr "Autobackup instellingen"
-
-#: ../plugin.py:132
+#: plugin.py:132
 msgid "Automatic settings backup"
 msgstr "Automatische reservekopie"
 
-#: ../ui.py:116
-msgid "Automatic start time"
-msgstr "Aanvangstijd automatische backup"
+#: ui.py:22 ui.py:43
+msgid "Harddisk"
+msgstr "Harde schijf"
 
-#: ../ui.py:194
-msgid "Backup EPG cache"
-msgstr "Backup EPG-cache"
+#: ui.py:23
+msgid "USB"
+msgstr "USB"
 
-#: ../ui.py:114
-msgid "Backup location"
-msgstr "Kies de locatie voor de backup"
-
-#: ../ui.py:24 ../ui.py:41
+#: ui.py:24 ui.py:41
 msgid "CF"
 msgstr "CF"
 
-#: ../ui.py:122 ../ui.py:363
+#: ui.py:25
+msgid "SD"
+msgstr "SD"
+
+#: ui.py:38
+msgid "root"
+msgstr "root"
+
+#: ui.py:98 ui.py:146
+msgid "AutoBackup Configuration"
+msgstr "Autobackup instellingen"
+
+#: ui.py:111
+msgid "Nowhere"
+msgstr "Nergens"
+
+#: ui.py:114
+msgid "Backup location"
+msgstr "Kies de locatie voor de backup"
+
+#: ui.py:115
+msgid "Daily automatic backup"
+msgstr "Elke dag automatisch een backup maken"
+
+#: ui.py:116
+msgid "Automatic start time"
+msgstr "Aanvangstijd automatische backup"
+
+#: ui.py:117
+msgid "Create Autoinstall"
+msgstr "Maak een Autoinstall bestand aan"
+
+#: ui.py:118
+msgid "EPG cache backup"
+msgstr "Backup de EPG-cache"
+
+#: ui.py:119
+msgid "Save previous backup"
+msgstr "Sla de vorige backup op"
+
+#: ui.py:122 ui.py:363
 msgid "Cancel"
 msgstr "Annuleren"
 
-#: ../ui.py:312
-msgid ""
-"Choose a backup.\n"
-"This will delete autoinstall list.\n"
-"Do you really want to continue?"
-msgstr ""
+#: ui.py:123
+msgid "Ok"
+msgstr "Bevestigen"
 
-#: ../ui.py:283
-#, fuzzy
+#: ui.py:124
+msgid "Manual"
+msgstr "Handmatig"
+
+#: ui.py:125
+msgid "Options/Restore"
+msgstr "Opties / Herstellen"
+
+#: ui.py:162
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Geen geschikt medium gevonden, USB stick, CF kaart of harddisk nodig."
+
+#: ui.py:169
+msgid "Last backup date"
+msgstr "Datum vorige backup"
+
+#: ui.py:171 ui.py:174
+msgid "No backup present"
+msgstr "Geen backup aanwezig"
+
+#: ui.py:192
+msgid "Select files to backup"
+msgstr "Kies de bestanden om te backuppen"
+
+#: ui.py:193
+msgid "Run a backup now"
+msgstr "Maak nu een backup"
+
+#: ui.py:194
+msgid "Backup EPG cache"
+msgstr "Backup EPG-cache"
+
+#: ui.py:195
+msgid "Run autoinstall"
+msgstr "Start de AutoInstall"
+
+#: ui.py:196
+msgid "Remove autoinstall list"
+msgstr "Verwijder de AutoInstall lijst"
+
+#: ui.py:197
+msgid "Restore"
+msgstr "Herstel de image"
+
+#: ui.py:222 ui.py:261 ui.py:290
+msgid "Running..."
+msgstr "Loopt"
+
+#: ui.py:236 ui.py:275 ui.py:304
+msgid "from: "
+msgstr "vanaf: "
+
+#: ui.py:241
+msgid "No settings backups found"
+msgstr "Er zijn geen backups van de instellingen gevonden"
+
+#: ui.py:244
+msgid ""
+"Choose settings backup which should be restored.\n"
+"Do you really want to restore these settings and restart?"
+msgstr ""
+"Kies de backup die u wenst te herstellen.\n"
+"Wilt u deze backup herstellen en daarna herstarten?"
+
+#: ui.py:251
+msgid "Do you want to restore your settings?"
+msgstr "Wilt u uw instellingen herstellen?"
+
+#: ui.py:280 ui.py:309
+msgid "No autoinstall list found"
+msgstr "Er is geen autoinstall lijst aangetroffen"
+
+#: ui.py:283
 msgid ""
 "Choose a backup.\n"
 "This will reinstall all plugins from your backup.\n"
 "Do you really want to reinstall?"
 msgstr ""
-"De backup wordt teruggezet vanaf %s.\n"
-"Nu herstellen en opnieuw opstarten?"
+"Kies een backup.\n"
+"Hiermee worden alle plug-ins vanuit de backup hersteld.\n"
+"Wilt u de herstelprocedure starten?"
 
-#: ../ui.py:244
-#, fuzzy
+#: ui.py:312
 msgid ""
-"Choose settings backup which should be restored.\n"
-"Do you really want to restore these settings and restart?"
+"Choose a backup.\n"
+"This will delete autoinstall list.\n"
+"Do you really want to continue?"
 msgstr ""
-"De backup wordt teruggezet vanaf %s.\n"
-"Nu herstellen en opnieuw opstarten?"
+"Kies een backup.\n"
+"Dit zal de autoinstall lijst wissen.\n"
+"Wilt u doorgaan?"
 
-#: ../ui.py:117
-msgid "Create Autoinstall"
-msgstr "Maak een Autoinstall bestand aan"
-
-#: ../ui.py:115
-msgid "Daily automatic backup"
-msgstr "Elke dag automatisch een backup maken"
-
-#: ../ui.py:400
-msgid "Deselect"
-msgstr "Déselecteer"
-
-#: ../ui.py:251
-msgid "Do you want to restore your settings?"
-msgstr ""
-
-#: ../ui.py:336
-msgid "Done"
-msgstr "Gereed"
-
-#: ../ui.py:118
-msgid "EPG cache backup"
-msgstr "Backup de EPG-cache"
-
-#: ../ui.py:334
+#: ui.py:334
 msgid "Failed"
 msgstr "Mislukt"
 
-#: ../ui.py:22 ../ui.py:43
-msgid "Harddisk"
-msgstr "Harde schijf"
+#: ui.py:336
+msgid "Done"
+msgstr "Gereed"
 
-#: ../ui.py:169
-msgid "Last backup date"
-msgstr "Datum vorige backup"
-
-#: ../ui.py:124
-msgid "Manual"
-msgstr "Handmatig"
-
-#: ../ui.py:280 ../ui.py:309
-#, fuzzy
-msgid "No autoinstall list found"
-msgstr "Verwijder de AutoInstall lijst"
-
-#: ../ui.py:171 ../ui.py:174
-msgid "No backup present"
-msgstr "Geen backup aanwezig"
-
-#: ../ui.py:241
-#, fuzzy
-msgid "No settings backups found"
-msgstr "Automatische reservekopie"
-
-#: ../ui.py:162
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr "Geen geschikt medium gevonden, USB stick, CF kaart of harddisk nodig."
-
-#: ../ui.py:111
-msgid "Nowhere"
-msgstr "Nergens"
-
-#: ../ui.py:123
-msgid "OK"
-msgstr "Bevestigen"
-
-#: ../ui.py:125
-#, fuzzy
-msgid "Options/Restore"
-msgstr "Herstel de image"
-
-#: ../ui.py:196
-msgid "Remove autoinstall list"
-msgstr "Verwijder de AutoInstall lijst"
-
-#: ../ui.py:197
-msgid "Restore"
-msgstr "Herstel de image"
-
-#: ../ui.py:193
-msgid "Run a backup now"
-msgstr "Maak nu een backup"
-
-#: ../ui.py:195
-msgid "Run autoinstall"
-msgstr "Start de AutoInstall"
-
-#: ../ui.py:222 ../ui.py:261 ../ui.py:290
-msgid "Running..."
-msgstr "Loopt"
-
-#: ../ui.py:25
-msgid "SD"
-msgstr "SD"
-
-#: ../ui.py:364
+#: ui.py:364
 msgid "Save"
 msgstr "Opslaan"
 
-#: ../ui.py:119
-msgid "Save previous backup"
-msgstr "Sla de vorige backup op"
-
-#: ../ui.py:402
-msgid "Select"
-msgstr "Kies"
-
-#: ../ui.py:192
-msgid "Select files to backup"
-msgstr "Kies de bestanden om te backuppen"
-
-#: ../ui.py:394
+#: ui.py:394
 msgid "Select files/folders to backup"
 msgstr "Kies de bestanden en mappen voor de backup"
 
-#: ../ui.py:23
-msgid "USB"
-msgstr "USB"
+#: ui.py:400
+msgid "Deselect"
+msgstr "Déselecteer"
 
-#: ../ui.py:236 ../ui.py:275 ../ui.py:304
-msgid "from: "
-msgstr ""
+#: ui.py:402
+msgid "Select"
+msgstr "Kies"
 
-#: ../ui.py:38
-msgid "root"
-msgstr "root"
+#~ msgid "Disable"
+#~ msgstr "Déactiveren"
+
+#~ msgid "Disabled"
+#~ msgstr "Uitgeschakeld!"
+
+#~ msgid "Don't auto-restore this next time"
+#~ msgstr "Zet de backup niet vanzelf terug de volgende keer"
